feat: support customer estimate price through http service
