# backend/customer/api/customer/customer_grpc.pb.go
@@ -22,6 +22,7 @@ const (
 	Customer_GetVerifyCode_FullMethodName = "/api.customer.Customer/GetVerifyCode"
 	Customer_Login_FullMethodName         = "/api.customer.Customer/Login"
 	Customer_Logout_FullMethodName        = "/api.customer.Customer/Logout"
+	Customer_EstimatePrice_FullMethodName = "/api.customer.Customer/EstimatePrice"
 )
 
 // CustomerClient is the client API for Customer service.
@@ -31,6 +32,7 @@ type CustomerClient interface {
 	GetVerifyCode(ctx context.Context, in *GetVerifyCodeRequst, opts ...grpc.CallOption) (*GetVerifyCodeResponse, error)
 	Login(ctx context.Context, in *LoginRequest, opts ...grpc.CallOption) (*LoginResponse, error)
 	Logout(ctx context.Context, in *LogoutRequest, opts ...grpc.CallOption) (*LogoutResponse, error)
+	EstimatePrice(ctx context.Context, in *EstimatePriceRequest, opts ...grpc.CallOption) (*EstimatePriceResponse, error)
 }
 
 type customerClient struct {
@@ -68,6 +70,15 @@ func (c *customerClient) Logout(ctx context.Context, in *LogoutRequest, opts ...
 	return out, nil
 }
 
+func (c *customerClient) EstimatePrice(ctx context.Context, in *EstimatePriceRequest, opts ...grpc.CallOption) (*EstimatePriceResponse, error) {
+	out := new(EstimatePriceResponse)
+	err := c.cc.Invoke(ctx, Customer_EstimatePrice_FullMethodName, in, out, opts...)
+	if err != nil {
+		return nil, err
+	}
+	return out, nil
+}
+
 // CustomerServer is the server API for Customer service.
 // All implementations must embed UnimplementedCustomerServer
 // for forward compatibility
@@ -75,6 +86,7 @@ type CustomerServer interface {
 	GetVerifyCode(context.Context, *GetVerifyCodeRequst) (*GetVerifyCodeResponse, error)
 	Login(context.Context, *LoginRequest) (*LoginResponse, error)
 	Logout(context.Context, *LogoutRequest) (*LogoutResponse, error)
+	EstimatePrice(context.Context, *EstimatePriceRequest) (*EstimatePriceResponse, error)
 	mustEmbedUnimplementedCustomerServer()
 }
 
@@ -90,6 +102,9 @@ func (UnimplementedCustomerServer) Login(context.Context, *LoginRequest) (*Login
 }
 func (UnimplementedCustomerServer) Logout(context.Context, *LogoutRequest) (*LogoutResponse, error) {
 	return nil, status.Errorf(codes.Unimplemented, "method Logout not implemented")
+}
+func (UnimplementedCustomerServer) EstimatePrice(context.Context, *EstimatePriceRequest) (*EstimatePriceResponse, error) {
+	return nil, status.Errorf(codes.Unimplemented, "method EstimatePrice not implemented")
 }
 func (UnimplementedCustomerServer) mustEmbedUnimplementedCustomerServer() {}
 
@@ -158,6 +173,24 @@ func _Customer_Logout_Handler(srv interface{}, ctx context.Context, dec func(int
 	return interceptor(ctx, in, info, handler)
 }
 
+func _Customer_EstimatePrice_Handler(srv interface{}, ctx context.Context, dec func(interface{}) error, interceptor grpc.UnaryServerInterceptor) (interface{}, error) {
+	in := new(EstimatePriceRequest)
+	if err := dec(in); err != nil {
+		return nil, err
+	}
+	if interceptor == nil {
+		return srv.(CustomerServer).EstimatePrice(ctx, in)
+	}
+	info := &grpc.UnaryServerInfo{
+		Server:     srv,
+		FullMethod: Customer_EstimatePrice_FullMethodName,
+	}
+	handler := func(ctx context.Context, req interface{}) (interface{}, error) {
+		return srv.(CustomerServer).EstimatePrice(ctx, req.(*EstimatePriceRequest))
+	}
+	return interceptor(ctx, in, info, handler)
+}
+
 // Customer_ServiceDesc is the grpc.ServiceDesc for Customer service.
 // It's only intended for direct use with grpc.RegisterService,
 // and not to be introspected or modified (even as a copy)
@@ -176,6 +209,10 @@ var Customer_ServiceDesc = grpc.ServiceDesc{
 		{
 			MethodName: "Logout",
 			Handler:    _Customer_Logout_Handler,
+		},
+		{
+			MethodName: "EstimatePrice",
+			Handler:    _Customer_EstimatePrice_Handler,
 		},
 	},
 	Streams:  []grpc.StreamDesc{},
